esgi-gcp-Kubernetes/k8s/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
        - name: back
          image: elie91/esgi2020-back
          ports:
            - containerPort: 9000
