esgi-gcp-Kubernetes/k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: elie91/esgi2020-front
          args: [ "--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1" ]
          ports:
            - containerPort: 3000
