esgi-gcp-Kubernetes/k8s/nginxback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxback-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: nginxback
  template:
    metadata:
      labels:
        component: nginxback
    spec:
      containers:
        - name: nginxback
          image: elie91/esgi2020-nginxbacks
          args: [ "--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1" ]
          ports:
            - containerPort: 5000
