esgi-gcp-Kubernetes/k8s/back-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 9000
      targetPort: 9000
