esgi-gcp-Kubernetes/k8s/front-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
