esgi-gcp-Kubernetes/k8s/nginxback-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxback-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: nginxback
  ports:
    - port: 5000
      targetPort: 5000
